Bug 1937696 - part 1: Make `HTMLEditor::InsertPaddingBRElementIfNeeded` insert a padding `<br>` rather than a normal `<br>` r=m_kato

Using normal `<br>` for padding `<br>` makes notifying IME of the mutation
because `ContentEventHandler` ignores only padding `<br>` elements.  Therefore,
we should make it use a padding `<br>` for hiding the mutations from IME since
IME may be confused at unexpected text change notifications.

Differential Revision: https://phabricator.services.mozilla.com/D232601